--- a/Production/Frontend_prod/Dockerfile
+++ b/Production/Frontend_prod/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build the React app
-FROM node:16-alpine AS build
+FROM node:16 AS build
 
 # Set the working directory
 WORKDIR /app
@@ -18,14 +18,14 @@ RUN npm run build
 
 
 
-# Stage 2: Serve the built files with Nginx
-FROM nginx:alpine
+# Stage 2: Serve the built files with Nginx stable (compatible with amd64 which is required by Render)
+FROM nginx:stable
 
 # Copy the built React app from the previous stage
 COPY --from=build /app/build /usr/share/nginx/html
 
 # Expose port 80 for the Nginx server
-EXPOSE 3000
+EXPOSE 80
 
 # Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
