--- a/Production/Backend_prod/package.json
+++ b/Production/Backend_prod/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "connect-redis": "^8.0.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
@@ -22,7 +23,8 @@
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "pg": "^8.14.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
